--- a/connections.html
+++ b/connections.html
@@ -56,7 +56,6 @@
     user-select: none;
   }
   .tile.selected { background: #59594E; color: #F8F8F8; transform: scale(1.05); }
-  .tile.correct { cursor: default; color: white; }
 
   .group-yellow { background: #fbe48c; }
   .group-green  { background: #9dd296; }
@@ -89,16 +88,15 @@
   }
   
   .btn:hover:active {
-    filter: invert(100%);
+    filter: invert(90%);
   }
   
   .btn:not(:hover):not(:active) {
     filter: none;
   }
   
-  .btn:focus {
-    filter: none;
-    outline: none;
+  .btn:focus-visible {
+    filter: invert(90%);
   }
   .long-tile {
     display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center;
@@ -151,7 +149,7 @@
     <a href="index.html">
       <img src="icons/nyt_logo.png" alt="Back" class="topbar-icon">
     </a>
-    <button class="btn" style="margin-left:auto; margin-right: 30px;" onclick="newGame()">New Game</button>
+    <button class="btn" id="newGameBtn" style="margin-left:auto; margin-right: 30px;">New Game</button>
   </div>
   <div class="page-wrapper">
     <h1>Create four groups of four!</h1>
@@ -163,9 +161,9 @@
     </div>
 
     <div class="actions">
-      <button class="btn" onclick="shuffleTiles()">Shuffle</button>
-      <button class="btn" onclick="deselectAll()">Deselect All</button>
-      <button class="btn" id="submitBtn" onclick="submitSelection()">Submit</button>
+      <button class="btn" id="shuffleBtn">Shuffle</button>
+      <button class="btn" id="deselectBtn">Deselect All</button>
+      <button class="btn" id="submitBtn">Submit</button>
     </div>
 
     <div id="message" style="margin-top:15px; font-weight:bold;"></div>
@@ -183,12 +181,17 @@
 
     let words = categories.flatMap(c => c.words).sort(() => Math.random() - 0.5);
     const grid = document.getElementById("grid");
-    const message = document.getElementById("message");
     const livesContainer = document.getElementById("lives");
     const animOverlay = document.getElementById("animOverlay");
     let selected = [];
     let mistakes = 4;
-    let solvedGroups = 0;
+    const DUR = {
+      move: 700,        // tile movement animation (ms)
+      grow: 450,        // "merge grow" animation (ms)
+      settle: 300,      // "settle down" after grow (ms)
+      oneAway: 2000     // "One away..." message display time (ms)
+    };
+        let solvedGroups = 0;
     let fusedTiles = [];
 
     const pageWrapper = document.querySelector('.page-wrapper');
@@ -289,7 +292,6 @@ function newGame() {
         const div = document.createElement("div");
         div.classList.add("tile");
         div.textContent = word;
-        div.onclick = () => toggleSelect(div);
         grid.appendChild(div);
         adjustFont(div);
       });
@@ -368,7 +370,7 @@ function newGame() {
         messageBox.classList.add("show");
       });
 
-      await wait(2000);
+      await wait(DUR.oneAway);
       messageBox.classList.remove("show");
       await wait(300);
       messageBox.remove();
@@ -393,7 +395,6 @@ function newGame() {
       const topRects = topRowTiles.map(t => t.getBoundingClientRect());
 
       const topNonSelected = topRowTiles.filter(t => !selectedTiles.includes(t));
-      const topNonSelectedRects = topNonSelected.map(t => t.getBoundingClientRect());
 
       const clones = [];
       selectedTiles.forEach(t => {
@@ -407,9 +408,9 @@ function newGame() {
         topClones.push(createCloneFromElement(t));
       });
 
-      const moveDuration = 700;
-      const growDuration = 450;
-      const settleDuration = 300;
+      const moveDuration = DUR.move;
+      const growDuration = DUR.grow;
+      const settleDuration = DUR.settle;
 
       clones.forEach((item, idx) => {
         const targetRect = topRects[idx] || selectedRects[idx] || item.rect;
@@ -588,7 +589,6 @@ function newGame() {
       const topRects = topRowTiles.map(t => t.getBoundingClientRect());
 
       const topNonSelected = topRowTiles.filter(t => !selectedTiles.includes(t));
-      const topNonSelectedRects = topNonSelected.map(t => t.getBoundingClientRect());
 
       const clones = [];
       selectedTiles.forEach(t => {
@@ -770,6 +770,20 @@ function newGame() {
     
 
     renderLives();
+    // Topbar button
+    document.getElementById('newGameBtn').addEventListener('click', newGame);
+
+    // Action buttons
+    document.getElementById('shuffleBtn').addEventListener('click', shuffleTiles);
+    document.getElementById('deselectBtn').addEventListener('click', deselectAll);
+    document.getElementById('submitBtn').addEventListener('click', submitSelection);
+
+    grid.addEventListener('click', (e) => {
+      const tile = e.target.closest('.tile');
+      if (!tile || tile.classList.contains('correct')) return;
+      toggleSelect(tile);
+    });
+    
 
   </script>
 </body>
