refactor connections completed

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </a>
 
       <!-- Connections -->
-      <a href="connections.html" class="game-tile connections">
+      <a href="games/connections/index.html" class="game-tile connections">
         <div class="game-info">
           <span class="game-name">Connections</span>
           <span class="game-subtitle">Group words from our adventures together.</span>
