--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <div class="games-list">
       <!-- Wordle -->
-      <a href="wordle.html" class="game-tile wordle">
+      <a href="games/wordle/index.html" class="game-tile wordle">
         <div class="game-info">
           <span class="game-name">Wordle</span>
           <span class="game-subtitle">A way to make a bit better your least favourite one.</span>
@@ -128,7 +128,7 @@
       </a>
 
       <!-- Strands -->
-      <a href="strands.html" class="game-tile strands">
+      <a href="games/strands/index.html" class="game-tile strands">
         <div class="game-info">
           <span class="game-name">Strands</span>
           <span class="game-subtitle">Unravel the hidden theme by connecting letters.</span>
