--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </a>
 
       <!-- The Mini -->
-      <a href="mini.html" class="game-tile the-mini">
+      <a href="games/mini/index.html" class="game-tile the-mini">
         <div class="game-info">
           <span class="game-name">The Mini</span>
           <span class="game-subtitle">A quick crossword for when you’re short on time.</span>
