--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <a href="games/strands/index.html" class="game-tile strands">
         <div class="game-info">
           <span class="game-name">Strands</span>
-          <span class="game-subtitle">Unravel the hidden theme by connecting letters.</span>
+          <span class="game-subtitle">Unravel the hidden adventure by connecting letters.</span>
           <span class="games-date">Sunday, 9 Nov</span>
         </div>
         <img src="icons/strands.png" alt="Strands Logo" class="game-logo">
@@ -141,7 +141,7 @@
       <a href="games/mini/index.html" class="game-tile the-mini">
         <div class="game-info">
           <span class="game-name">The Mini</span>
-          <span class="game-subtitle">A quick crossword for when you’re short on time.</span>
+          <span class="game-subtitle">A quicky to keep practising for the big one.</span>
           <span class="games-date">Sunday, 9 Nov</span>
         </div>
         <img src="icons/mini.png" alt="The Mini Logo" class="game-logo">
