--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <a href="games/strands/index.html" class="game-tile strands">
         <div class="game-info">
           <span class="game-name">Strands</span>
-          <span class="game-subtitle">Unravel the hidden adventure by connecting letters.</span>
+          <span class="game-subtitle">Find hidden words to uncover the secret adventure.</span>
           <span class="games-date">Sunday, 9 Nov</span>
         </div>
         <img src="icons/strands.png" alt="Strands Logo" class="game-logo">
