add readme with demo and screenshots

--- a/games/connections/index.html
+++ b/games/connections/index.html
@@ -10,7 +10,7 @@
   <div class="topbar">
     <!-- Go back to the main hub -->
     <a href="../../index.html">
-      <img src="../../icons/nyt_logo.png" alt="Back" class="topbar-icon">
+      <img src="../../docs/icons/nyt_logo.png" alt="Back" class="topbar-icon">
     </a>
     <button class="btn" id="newGameBtn" style="margin-left:auto; margin-right: 30px;">New Game</button>
   </div>
