--- a/games/mini/index.html
+++ b/games/mini/index.html
@@ -9,12 +9,12 @@
 <body>
   <div class="topbar">
     <a href="../../index.html" aria-label="Back to home">
-      <img src="../../icons/nyt_logo.png" alt="Back" class="topbar-icon" />
+      <img src="../../docs/icons/nyt_logo.png" alt="Back" class="topbar-icon" />
     </a>
 
     <div class="gear-container">
       <div class="gear" aria-label="Settings">
-        <img src="../../icons/gear.png" alt="Settings" />
+        <img src="../../docs/icons/gear.png" alt="Settings" />
       </div>
     </div>
 
