--- a/games/wordle/index.html
+++ b/games/wordle/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="topbar">
     <a href="../../index.html" aria-label="Back to home">
-      <img src="../../icons/nyt_logo.png" alt="Back" class="topbar-icon">
+      <img src="../../docs/icons/nyt_logo.png" alt="Back" class="topbar-icon">
     </a>
     <button id="newGameBtn" class="new-game-btn">New Game</button>
   </div>
