--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
   <div class="page-wrapper">
     <header>
-      <img src="icons/nyt_games.png" alt="The New York Times Logo" class="nyt-logo">
+      <img src="docs/icons/nyt_games.png" alt="The New York Times Logo" class="nyt-logo">
       <div class="date">Sunday, 9th of November</div>
       <small style="color:#6b7280; margin-top:0px;text-align: center;">Recopilación de nuestras aventuras en nuestro formato favorito.</small>
     </header>
@@ -114,7 +114,7 @@
           <span class="game-subtitle">A way to make a bit better your least favourite one.</span>
           <span class="games-date">Sunday, 9 Nov</span>
         </div>
-        <img src="icons/wordle.png" alt="Wordle Logo" class="game-logo">
+        <img src="docs/icons/wordle.png" alt="Wordle Logo" class="game-logo">
       </a>
 
       <!-- Connections -->
@@ -124,7 +124,7 @@
           <span class="game-subtitle">Group words from our adventures together.</span>
           <span class="games-date">Sunday, 9 Nov</span>
         </div>
-        <img src="icons/connections.png" alt="Connections Logo" class="game-logo">
+        <img src="docs/icons/connections.png" alt="Connections Logo" class="game-logo">
       </a>
 
       <!-- Strands -->
@@ -134,7 +134,7 @@
           <span class="game-subtitle">Find hidden words to uncover the secret adventure.</span>
           <span class="games-date">Sunday, 9 Nov</span>
         </div>
-        <img src="icons/strands.png" alt="Strands Logo" class="game-logo">
+        <img src="docs/icons/strands.png" alt="Strands Logo" class="game-logo">
       </a>
 
       <!-- The Mini -->
@@ -144,7 +144,7 @@
           <span class="game-subtitle">A quicky to keep practising for the big one.</span>
           <span class="games-date">Sunday, 9 Nov</span>
         </div>
-        <img src="icons/mini.png" alt="The Mini Logo" class="game-logo">
+        <img src="docs/icons/mini.png" alt="The Mini Logo" class="game-logo">
       </a>
       <small style="color:#6b7280; margin-top:0px;text-align: center;">Made with ♡ by Rodri</small>
     </div>
