--- a/games/strands/index.html
+++ b/games/strands/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="topbar">
     <a href="../../index.html">
-      <img src="../../icons/nyt_logo.png" alt="Back" class="topbar-icon">
+      <img src="../../docs/icons/nyt_logo.png" alt="Back" class="topbar-icon">
     </a>
     <button id="newGameBtn" style="
       padding: 10px 20px; 
