block zooming by user

--- a/games/wordle/index.html
+++ b/games/wordle/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=0.9,maximum-scale=0.9,user-scalable=no" />
+  <meta name="viewport" content="width=device-width,initial-scale=0.9" />
   <title>Mini Wordle - HTML/JS</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
