--- a/games/strands/index.html
+++ b/games/strands/index.html
@@ -29,7 +29,7 @@
     <div class="game">
       <div class="theme">
           <div class="theme-top">TODAY'S THEME</div>
-          <div class="theme-bottom">Planning ahead</div>
+          <div class="theme-bottom">Planned ahead</div>
       </div>
       <div class="current-word"></div>
       <div class="grid">
